# librusek

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  capacitor.config.json  main_profile.json  main_timetable.json  next-i18next.config.js  next.config.mjs  package-lock.json  package.json  pl_common.json  pl_developer.json  pl_exams.json  pl_teacherAbsences.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.js  tailwind.config.mjs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
android/: build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle  google-services.json
app/: error.js  layout.js
app/(main)/: layout.js  page.js
components/: layout.js
components/i18n/: link.js
components/messages/: message_common_component.js  message_detailed_view.js  message_item_view.js
ios/App/: Podfile  PrivacyInfo.xcprivacy
lib/: auth.js  class.js  core.js  grades.js  lessons.js  math.js  messages.js  notes.js  notifications.js  placeholders.js  request.js  school.js  timetable.js  updater.js  user.js  utils.js
lib/i18n/: getStatic.js  languageDetector.js  redirect.js
pages/: 404.js  _app.js  _document.js  _error.js  attendance.js  auth.js  developer.js  exams.js  grades.js  index.js  messages.js  profile.js  settings.js  teacherAbsences.js  timetable.js
pages/[locale]/: attendance.js  auth.js  developer.js  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
styles/: globals.css
(+45 files in other folders)
