[package]
name = "app"
version = "0.5.0"
description = "Librusek app"
authors = ["SimonB50"]
license = "AGPL-3.0"
repository = "https://github.com/SimonB50/librusek"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-log = "2.2.1"
tauri-plugin-http = "2.3.0"
